--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body id="top">
 
-    <!-- Updated Navigation Bar -->
+    <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="logo">
-            <a href="#top"><img src="images/logo.png" alt="Evo1 Construction"></a>
+            <a href="#top"><img src="images/logo2.png" alt="Evo1 Construction"></a>
         </div>
         <ul>
             <li><a href="#top">HOME</a></li>
@@ -42,7 +42,7 @@
             <b>EVO1 CONSTRUCTION SERVICES</b> was established on September 25, 2014. Over the years, the 
             company specializes in contracting Renovation Projects and Industrial Cleaning Services. Founded 
             by Engr. Jay Esguerra, who has 15 years of experience in Aluminum Composite Panel, waterproofing 
-            and paiting works, HVAC systems and cleanroom Construction and Trading products such as 
+            and painting works, HVAC systems and cleanroom Construction and Trading products such as 
             roofing, doors, windows, ceiling and various types of sun louvers and aluminum products, the 
             company grew together with group of installers who has more than several years of experience of 
             installation works. The knowledge gained especially in the strip installation works paved the way for 
@@ -79,7 +79,7 @@
     <section class="services" id="services">
         <h2>SERVICES</h2>
         <div class="service-item">
-            <img src="images/structural.png" alt="Structural Works">
+            <img src="images/structural.jpg" alt="Structural Works">
             <h3>STRUCTURAL WORKS</h3>
             <ul>
                 <li>Structural and Civil Works</li>
@@ -95,6 +95,8 @@
                 <li>Aluminum Composite Panel Installation</li>
                 <li>Waterproofing System</li>
                 <li>Anti-Corrosion and Protective Coatings</li>
+                <li>Customized Aluminum Products</li>
+                <li>CCNC Design and Fabrication</li>
             </ul>
         </div>
         <div class="service-item">
@@ -111,6 +113,7 @@
             <ul>
                 <li>HVAC System and Equipment Installation</li>
                 <li>Piping System</li>
+                <li>Electrical Works and Controls</li>
             </ul>
         </div>
         <!-- Add more services as needed -->
@@ -118,30 +121,30 @@
 
     <!-- Portfolio Section -->
     <section class="portfolio" id="portfolio">
-        <h2>PROJECTS</h2>
+        <h2>PREVIOUS PROJECTS</h2>
         <div class="project-item">
-            <a href="#" class="project-link" data-image="images/axis.jpg">
-                <img src="images/axis.jpg" alt="Project 1">
+            <a href="#" class="project-link" data-image="images/asian.jpg">
+                <img src="images/asian.jpg" alt="Project 1">
             </a>
-            <h3>Axis MEG</h3>
-            <p>Client: Axis MEG</p>
-            <p>Scope: Aluminum Composite Panel Supply & Installation</p>
+            <h3>Asian Hospital & Medical Center</h3>
+            <p>Client: Asian Hospital & Medical Center</p>
+            <p>Scope: Polycarbonate Canopy roofing</p>
         </div>
         <div class="project-item">
-            <a href="#" class="project-link" data-image="images/lyceum.jpg">
-                <img src="images/lyceum.jpg" alt="Project 2">
+            <a href="#" class="project-link" data-image="images/BEResidences.jpg">
+                <img src="images/BEResidences.jpg" alt="Project 2">
             </a>
-            <h3>Lyceum of the Philippines</h3>
-            <p>Client: Lyceum of the Philippines</p>
-            <p>Scope: Aerofoil Project</p>
+            <h3>BE Residences</h3>
+            <p>Client: Enrison Land Inc.</p>
+            <p>Scope: Office Fit-Out</p>
         </div>
         <div class="project-item">
-            <a href="#" class="project-link" data-image="images/delasalle.jpg">
-                <img src="images/delasalle.jpg" alt="Project 3">
+            <a href="#" class="project-link" data-image="images/hilti-2.jpg">
+                <img src="images/hilti-2.jpg" alt="Project 3">
             </a>
-            <h3>De Lasalle University Henry Sy Sr. Hall</h3>
-            <p>Client: De Lasalle University</p>
-            <p>Scope: Renovation Works</p>
+            <h3>Hilti Tools and Services</h3>
+            <p>Client: Hilti Philippines</p>
+            <p>Scope: Warehouse Renovation</p>
         </div>
         <!-- Add more projects as needed -->
     </section>
@@ -172,7 +175,7 @@
         // Get the <span> element that closes the modal
         var span = document.getElementsByClassName("close")[0];
 
-        // When the user clicks on <span> (x), close the modal
+        // close the modal
         span.onclick = function() {
             modal.style.display = "none";
         }
@@ -185,12 +188,52 @@
         }
     </script>
 
+    <!-- meet the team section -->
+
+    <section class="team" id="team">
+        <h2>Meet the Team</h2>
+
+        <!-- CEO Section -->
+        <div class="ceo">
+            <img src="images/ceo.jpg" alt="CEO/Owner" class="ceo-photo">
+            <h3>Jay Esguerra - CEO/Owner</h3>
+            <p>Leading the company with over 15 years of experience in the construction industry.</p>
+        </div>
+
+        <!-- Teams Section -->
+        <div class="teams">
+            <h3>Our Teams</h3>
+            <div class="team-gallery">
+                <div class="team-item">
+                    <img src="images/team1.jpg" alt="Team 1">
+                    <!-- <p>Engineering Team</p> -->
+                </div>
+                <div class="team-item">
+                    <img src="images/team2.jpg" alt="Team 2">
+                    <!-- <p>Operations Team</p> -->
+                </div>
+                <div class="team-item">
+                    <img src="images/team3.jpg" alt="Team 3">
+                    <!-- <p>Project Management Team</p> -->
+                </div>
+                <div class="team-item">
+                    <img src="images/team4.jpg" alt="Team 3">
+                    <!-- <p>Project Management Team</p> -->
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- Testimonials Section -->
     <section class="testimonials" id="testimonials">
         <h2>What Our Clients Say</h2>
         <blockquote>
-            "Their attention to detail and craftsmanship exceeded our expectations."
-            <cite>- John Doe, Residential Client</cite>
+            "Working with EVO1 Construction Services has been an exceptional experience. 
+            Their team is highly professional, efficient, and dedicated to delivering top-quality results. 
+            From start to finish, they made the entire process seamless and stress-free, consistently exceeding expectations. 
+            I highly recommend EVO1 Construction Services for anyone seeking reliable and expert construction services."
+            <cite>- Hilti Tools and Services</cite>
         </blockquote>
     </section>
 
@@ -201,13 +244,10 @@
                     <!-- Left Column: Contact Details -->
                     <div class="contact-details">
                         <h3>Our Contact Details</h3>
-                        <p><strong>Mobile:</strong> 
-                            0919-073-0411, 
-                            0999-225-0388</p>
+                        <p><strong>Mobile:</strong> 09176704118</p>
                         <p><strong>Email:</strong> evo1architectural@gmail.com</p>
-                        <p><strong>Location:</strong> 42 Saint Matthew St. Saint Charbel Executive Village 
-                            Quezon City, Philippines</p>
-                        <p><strong>Facebook:</strong> <a href="https://www.facebook.com/evo1construction">EVO1 Construction Services</a></p>
+                        <p><strong>Location:</strong> 9 2nd Street Paliparan Subd. Sto. Niño, Marikina City Philippines</p>
+                        <p><strong>Facebook:</strong> <a href="https://www.facebook.com/evo1construction" target="_blank">EVO1 Construction Services</a></p>
                     </div>
             
                     <!-- Right Column: Contact Form -->
@@ -233,7 +273,7 @@
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 EVO1 Construction Services. All Rights Reserved.</p>
-        <p> <b>Email:</b> evo1architectural@gmail.com | <b>Customer Support:</b> 0969-233-3395 | <b>Facebook:</b> Evo1 Construction Services</p>
+        <p> <b>Email:</b> evo1architectural@gmail.com | <b>Customer Support:</b> 0969-233-3395 | <b>Facebook:</b> EVO1 Construction Services</p>
     </footer>
 </body>
 
